--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,7 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -45,9 +46,11 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
 body {
   color: rgb(var(--foreground-rgb));
 }
+
 .hero_animation {
   background-image: linear-gradient(147.92deg, hsla(239, 76%, 53%, 0.456) 10.41%, hsla(0, 0%, 100%, 0) 89.25%);
   animation: changeBackgroundColor 8s infinite alternate;
@@ -63,21 +66,28 @@ body {
 
 
 @keyframes changeBackgroundColor {
-  0%, 100% {
+
+  0%,
+  100% {
     opacity: 1;
   }
+
   16.67% {
     opacity: 0.9;
   }
+
   33.33% {
     opacity: 0.8;
   }
+
   50% {
     opacity: 0.6;
   }
+
   66.67% {
     opacity: 0.5;
   }
+
   83.33% {
     opacity: 0.4;
   }
@@ -87,18 +97,23 @@ body {
   0% {
     transform: translateX(0);
   }
+
   20% {
     transform: translateX(-2px);
   }
+
   40% {
     transform: translateX(2px);
   }
+
   60% {
     transform: translateX(-2px);
   }
+
   80% {
     transform: translateX(2px);
   }
+
   100% {
     transform: translateX(0);
   }
@@ -112,7 +127,7 @@ body {
   width: 200px !important;
 } */
 
-.slick-dots{
+.slick-dots {
   bottom: -43px !important;
 }
 
@@ -158,18 +173,29 @@ body {
 
 @keyframes move-forever {
   0% {
-      transform: translate3d(-90px, 0, 0);
+    transform: translate3d(-90px, 0, 0);
   }
 
   100% {
-      transform: translate3d(85px, 0, 0);
+    transform: translate3d(85px, 0, 0);
   }
 }
 
 /*Shrinking for mobile*/
 @media (max-width: 768px) {
   .waves {
-      height: 40px;
-      min-height: 40px;
+    height: 40px;
+    min-height: 40px;
   }
+}
+
+.slick-slide>div {
+  display: grid;
+  place-items: center;
+  /* width: 80%; */
+  margin-top: 50px;
+  margin: auto;
+  /* height: 500px; */
+  padding: 0px;
+  /* background: red; */
 }
